# ydesk

./: .gitignore  AUTHORS  Makefile.am  README.md  TODO  configure.ac  shot.sh
data/: Makefile.am  ydesk.gschema.xml
data/fdo/: Makefile.am  ydesk.notification.service.in
data/icons/: Makefile.am
data/icons/16x16/actions/: Makefile.am
data/icons/16x16/apps/: Makefile.am
data/icons/16x16/categories/: Makefile.am
data/icons/16x16/devices/: Makefile.am
data/icons/16x16/status/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/24x24/actions/: Makefile.am
data/icons/24x24/apps/: Makefile.am
data/icons/24x24/categories/: Makefile.am
data/icons/24x24/devices/: Makefile.am
data/icons/24x24/status/: Makefile.am
data/icons/32x32/apps/: Makefile.am
data/icons/32x32/categories/: Makefile.am
data/icons/32x32/devices/: Makefile.am
data/icons/32x32/status/: Makefile.am
data/icons/48x48/actions/: Makefile.am
data/icons/48x48/apps/: Makefile.am
data/icons/48x48/categories/: Makefile.am
data/icons/48x48/devices/: Makefile.am
data/icons/48x48/status/: Makefile.am
data/menu/: Makefile.am  applications.menu
data/menu/desktop-directories/: Makefile.am  Settings.directory.in
data/misc/: Makefile.am  conky.conf  trayrc  xres.lang  xxkbrc
data/settings/: Makefile.am  desk.desktop.in  interface.desktop.in  mime.desktop.in  panel.desktop.in  printer.desktop.in  session.desktop.in  sound.desktop.in  term.desktop.in  ysettings.desktop.in
data/theme/: Makefile.am  lock.xcursor  settings.ini  yman.css
data/theme/gtk-3.0/: Makefile.am  gtk-apps.css  gtk-colors.css  gtk-keys.css  gtk-main.css  gtk-widgets.css  gtk.css  gtk.gresource.xml
data/theme/icons/: Makefile.am  index.theme.in
data/theme/icons/16x16/actions/: Makefile.am
data/theme/icons/24x24/actions/: Makefile.am
data/theme/icons/32x32/actions/: Makefile.am
data/theme/icons/48x48/actions/: Makefile.am
data/theme/icons/64x64/actions/: Makefile.am
data/theme/icons/96x96/actions/: Makefile.am
data/theme/icons/scalable/actions/: Makefile.am
data/utils/: Makefile.am  yfind.desktop.in  yimage.desktop.in  yman.desktop.in  ynotes.desktop.in  yps.desktop.in  ysession.desktop.in  ysysinfo.desktop.in  ywifi.desktop.in
fdo/: Makefile.am  notifyd
fvwm/: Makefile.am  cpu.c
fvwm/config/: colors.fvwm  decor.fvwm  functions.fvwm  keys.fvwm  main.fvwm  main.fvwm.in  menus.fvwm  modules.fvwm
fvwm/config/applets/: bat.fvwm  clock.fvwm  cpu.fvwm  desk.fvwm  kbd.fvwm  leds.fvwm  mail.fvwm  media.fvwm  menu.fvwm  mpris.fvwm  notes.fvwm  pager.fvwm  qlaunch.fvwm  run.fvwm  shot.fvwm  sysinfo.fvwm  taskbar.fvwm  tray.fvwm  volume.fvwm  wact.fvwm  weather.fvwm  wifi.fvwm  xeyes.fvwm
fvwm/scripts/: battery.sh  clipman.sh.in  clock.sh  icons.sh  infostore.sh  mail.sh.in  media.sh.in  mpris2.sh  notes.sh.in  panel.sh  prun.sh  qlaunch.sh  shot.sh.in  volume.sh  weather.sh.in  wifi.sh  ymenu.py
misc/: fvwm-borders.patch  fvwm-datadir.patch  fvwm-iconman.patch  fvwm-menusep.patch  fvwm-pager.patch  fvwm-tips.patch  intltool-fvwm.patch
po/: LINGUAS  POTFILES.in  ru.po  uk.po
settings/: Makefile.am  desktop.sh.in  interface.sh.in  mime.sh.in  panel.sh.in  printer.sh.in  session.sh.in  term.sh.in  ysettings.in
settings/panel/: Makefile.am  bat.sh.in  clock.sh.in  cpu.sh.in  mail.sh.in  menu.sh.in  run.sh.in  shot.sh.in  sysinfo.sh.in  taskbar.sh.in  volume.sh.in  weather.sh.in  wifi.sh.in
utils/: Makefile.am  ydentry.in  yfind.in  yimage.in  ylogout.in  yman.in  ymedia.in  ymixer.in  ynotes.in  ynotify.in  ypass.in  yps.in  yrun.in  ysession.in  ysysinfo.in  yterm.in  ywget.in  ywifi.in
